[package]
name = "rust_class"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.9.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"


[build-dependencies]
bindgen = "0.60.1"
